...
    const val PIN1_FIELD = "pin1Field"
    const val AUTHENTICATION_ACTION = "authenticationAction"
    const val AUTHENTICATION_STATUS = "authenticationStatus"
    const val DOCUMENT_VALIDATION_CARD = "documentValidationCard"
    const val DOCUMENT_VERIFY_ACTION = "documentVerifyAction"
    const val DOCUMENT_VALIDATION_STATUS = "documentValidationStatus"
    const val DOCUMENT_SIGNING_CARD = "documentSigningCard"
    const val DOCUMENT_FORMAT_PDF = "documentFormatPdf"
    const val DOCUMENT_FORMAT_CONTAINER = "documentFormatContainer"
    const val DOCUMENT_CHOOSE_ACTION = "documentChooseAction"
    const val DOCUMENT_SELECTED_STATUS = "documentSelectedStatus"
    const val DOCUMENT_DESTINATION_ACTION = "documentDestinationAction"
    const val DOCUMENT_CAN_FIELD = "documentCanField"
    const val PIN2_FIELD = "pin2Field"
    const val DOCUMENT_SIGN_ACTION = "documentSignAction"
    const val DOCUMENT_SIGNING_STATUS = "documentSigningStatus"
    const val TIMESTAMP_SETTINGS_ACTION = "timestampSettingsAction"
    const val TIMESTAMP_SETTINGS_CARD = "timestampSettingsCard"
    const val TIMESTAMP_ADD_ACTION = "timestampAddAction"
    const val TIMESTAMP_SAVE_ACTION = "timestampSaveAction"
    const val TIMESTAMP_RESTORE_ACTION = "timestampRestoreAction"
    const val TIMESTAMP_CLOSE_ACTION = "timestampCloseAction"
...
