<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="choose_documents">Choose documents</string>
    <string name="add_file">Add file</string>
    <string name="signing_progress">Signing %1$d/%2$d…</string>
    <string name="finalizing_progress">Finalizing %1$d/%2$d…</string>
    <string name="saving_progress">Saving %1$d/%2$d…</string>
    <string name="signature_pin2">Signature PIN 2</string>
    <string name="sign_pdf_single">Sign document (PDF)</string>
    <string name="sign_pdf_multiple">Sign documents (PDF)</string>
...
